--- a/MyApp/appsettings.json
+++ b/MyApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyAppContextConnection": "Data Source=YASS\\MSSQLSERVER01; Initial Catalog=MyApp;Integrated Security=True;TrustServerCertificate=true"
+    "MyAppContextConnection": "Data Source=YASS\\MSSQLSERVER01; Initial Catalog=MyApp;Integrated Security=True;TrustServerCertificate=true",
+    "AuthDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=MyApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
-
